fixed layout issue on ipad

--- a/css/styles.css
+++ b/css/styles.css
@@ -759,6 +759,7 @@ a {
 
 @media screen and (max-width: 1024px) {
     .skills-experience {
+        display: block;
         max-height: 1500px;
         max-width: 700px;
     }
